--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.a {
+/*.a {
   float: left;
   display: block;
   color: #f2f2f2;
@@ -19,4 +19,11 @@
 
 h1 {
   color: "pink";
+}
+*/
+
+/* myStyle.css */
+body {
+ background-color: #333300;
+ color: #FFFFFF;
 }
