--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-/*.a {
+.a {
   float: left;
   display: block;
   color: #f2f2f2;
@@ -20,7 +20,7 @@
 h1 {
   color: "pink";
 }
-*/
+
 
 /* myStyle.css */
 body {
