--- a/index.css
+++ b/index.css
@@ -18,12 +18,12 @@
 }
 
 h1 {
-  color: "pink";
+  color: "white";
 }
 
 
 /* myStyle.css */
 body {
- background-color: #333300;
+ background-color: "blue";
  color: #FFFFFF;
 }
