--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
-.topnav a {
-  float: left;
+/*  float: left;
   display: block;
   color: #f2f2f2;
   text-align: center;
@@ -7,7 +6,11 @@
   text-decoration: none;
   font-size: 20;
 }
+*/
 
+a{
+  color: "blue"
+}
 .topnav a:hover {
   background-color: #ddd;
   color: black;
