--- a/index.css
+++ b/index.css
@@ -10,9 +10,9 @@ h1 {
   color: "white";
 }
 body {
- background-color: "blue";
+ background-color: blue;
  color: #FFFFFF;
 }
-a {
+a{
   color: "blue"
 }
